[gd_scene load_steps=5 format=2]

[ext_resource path="res://FinalScene.gd" type="Script" id=1]
[ext_resource path="res://TransitionScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://Button.gd" type="Script" id=3]
[ext_resource path="res://Images/final_image.png" type="Texture" id=4]

[node name="FinalScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 514, 304 )
scale = Vector2( 0.356594, 0.356594 )
texture = ExtResource( 4 )

[node name="GoHome" type="Button" parent="."]
margin_left = 454.0
margin_top = 372.0
margin_right = 578.0
margin_bottom = 397.0
text = "HOME"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionScene" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="GoHome" to="GoHome" method="_on_GoHome_pressed"]
