[gd_scene load_steps=4 format=2]

[ext_resource path="res://Button.gd" type="Script" id=1]
[ext_resource path="res://Images/background.jpg" type="Texture" id=2]
[ext_resource path="res://title.tscn" type="PackedScene" id=3]

[node name="Start" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.720001, 0.72 )
texture = ExtResource( 2 )

[node name="StartButton" type="Button" parent="."]
margin_left = 119.0
margin_top = 293.0
margin_right = 292.0
margin_bottom = 343.0
text = "start"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialButton" type="Button" parent="."]
margin_left = 763.0
margin_top = 292.0
margin_right = 936.0
margin_bottom = 342.0
text = "Tutorial"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -35 )

[connection signal="pressed" from="StartButton" to="StartButton" method="_on_StartButton_pressed"]
[connection signal="pressed" from="TutorialButton" to="StartButton" method="_on_TutorialButton_pressed"]
