[gd_scene load_steps=2 format=2]

[ext_resource path="res://Button.gd" type="Script" id=1]

[node name="Tutorial" type="Node2D"]

[node name="TutorialLabel" type="RichTextLabel" parent="."]
margin_left = 85.0
margin_top = 157.0
margin_right = 576.0
margin_bottom = 312.0
rect_scale = Vector2( 2.08773, 2.08773 )
text = "Use the arrow key to move left and right.

Jump using the space bar.

Press the enter in front of the door to open the door.

Collect the notes to complete the words and escape the gift box!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 41.0
margin_top = 522.0
margin_right = 214.0
margin_bottom = 572.0
text = "Back"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BackButton" to="BackButton" method="_on_BackButton_pressed"]
